# NASA-RMC-2018

./: .gitattributes  .gitignore  DevLog.txt  README.md
include/: Camera.h  Formatter.hpp  Formatter_Int.h  Lidar.h  NavX.h  Telecomm.h  joystick.hh
src/application/: DeadReckoning.cpp  LIDARtest.cpp  MC_MainV1.cpp  MakeCameraConfigFile.cpp  MakeLidarConfigFile.cpp  telecommTest.cpp
src/arduino/NASA_RMC_V1/: Formatter.h  NASA_RMC.ino
src/util/: Camera.cpp  Formatter.cpp  Formatter_Int.cpp  Lidar.cpp  NavX.cpp  Telecomm.cpp  joystick.cc
testCode/: README.md
testCode/Arduino/NASA_RMC/: NASA_RMC.ino
testCode/ArduinoNavX/: DevLog.txt
testCode/ArduinoNavX_Encoders/: DevLog.txt
testCode/ArduinoNavX_Encoders/encoderTicks/: encoderTicks.ino
testCode/ArduinoNavX_Encoders/navXangles/: navXangles.ino
testCode/ArduinoSerial/: serial_to_arduino.cpp  serial_to_arduino.py  serial_to_arduino_print.cpp  serialtest3  serialtest4
testCode/ArduinoSerial_and_Joystick/: joystick  serial_to_arduino.cpp
testCode/BackSensors/: README.txt  VisionBeacons.h  runVisionBeacons.cpp
testCode/BackSensors/VisionBeaconsTest/: CMakeLists.txt  Camera.h  Makefile  VisionBeacons.cpp
testCode/Camera/: Camera.cpp  Camera.h  MakeCameraConfigFile.cpp
testCode/Communication/ArduinoSerial/: serial_to_arduino.py
testCode/Communication/Config/: Notes.txt
testCode/Communication/formatter/: Devlog  Formatter.cc  debug_float.cc  tst2.cpp
testCode/Communication_Link/: CMakeLists.txt  package.xml
testCode/Communication_Link/src/: Instructor_Node.cpp
testCode/Config/: Config.cpp  Config.h
testCode/DeadReckoning/: CMakeLists.txt  DevLog_DR.txt  IMU.h  NavX.cpp  NavX.h  function list.txt  notes.txt
testCode/DeadReckoning/DeadReckoning/: CMakeLists.txt  DeadReckoning.cpp  NavX.cpp  NavX.h
testCode/DeadReckoning/DeadReckoning/include/: NavX.h
testCode/DeadReckoning/DeadReckoning/include/obs/: IMUProtocol.h
testCode/DeadReckoning/DeadReckoning/src/: DeadReckoning.cpp
testCode/DeadReckoning/hello/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello.cpp
testCode/Fusion/Localization/: Localization.cpp  Localization.h
testCode/Fusion/pointcloud/lidarRealtimeViz/: CMakeLists.txt  Lidar.cpp
testCode/Fusion/pointcloud/pclSimpleCloudViewer/: CMakeLists.txt
testCode/JoystickTelecomm/: joystick1  joystick_to_telecom.cpp  joystick_to_terminal.cpp
testCode/LIDAR/: .devlog.kate-swp  CMakeLists.txt  DevLog.txt  LIDAR.cpp  LIDAR.h  LIDARclass.cpp  LIDARclass.h  LIDARclassMAIN.cpp  LIDARmain.cpp  LIDARtest.cpp  Lidar.cpp  Lidar.h  MakeLeftLidarConfig.cpp  cpptest1  devlog  filetoimage3dpyplot.py  location_to_file.cpp  rightStandLidar.yml  test2.cpp
testCode/LIDAR/mollyV1/: LIDARclass.cpp  LIDARclass.h  LIDARclassMAIN.cpp
testCode/LIDAR/mollyV2/: LIDARmain.cpp  cpptest1  devlog
testCode/Localization/: DevLog.txt  Localization.cpp
testCode/Main_Exec/: DevLog.txt  MC_Display.cpp  MC_Main.cpp  RPI_Main.cpp  compile_MC.sh  compile_RPI.sh
testCode/Main_Exec/Arduino/NASA_RMC/: Formatter.cpp  Formatter.h  NASA_RMC.ino
testCode/Main_Exec/Arduino/encodersAndNavX/: encodersAndNavX.ino  encodersAndNavXDevLog.txt
testCode/Main_Exec/Arduino/encodersAndNavX/doublechecking/: doublechecking.ino
testCode/Main_Exec/Arduino/mini6_SerialControl/: mini6_SerialControl.ino
testCode/Main_Exec/JoystickTelecomm/: joystick.hh
testCode/Main_Exec/Teleop/: CMakeLists.txt  LaptopJoystickWifi.cpp  PiWifiMotorsSerial.cpp  PiWifiMotorsSerialSelf.cpp  compile_Laptop.sh  compile_Pi.sh
testCode/Main_Exec/Teleop/Teleop_Motors_Arduino/: Teleop_Motors_Arduino.ino
testCode/Sensors/DeadReckoning/: CMakeLists.txt  DeadReckoning.cpp
testCode/Sensors/LIDAR/: Lidar.cpp
testCode/Sensors/LIDAR/ConfigStuff/: MakeRightLidarConfig.cpp
testCode/Sensors/LIDAR/mollyV1/: LIDARclass.cpp
testCode/Sensors/LIDAR/mollyV2/: LIDAR.cpp  filetoimage.py  filetoimage3dpyplot.py
testCode/Sensors/decawave/: decawave.cpp  decawave.h  decawaveDriver.cpp  howtoparse.txt  positionFromDecawave.cpp  testdw.cpp
testCode/Telecomm/: Devlog  Telecomm.cpp  Telecomm.h  telecommTest_better.cpp
testCode/Telecomm/TelecommNoBuffer/: Telecomm.cpp  Telecomm.h
testCode/Teleop/: Devlog.txt  LaptopJoystickWifi.cpp  LaptopJoystickWifiSelf.cpp  PiWifiMotors.cpp  PiWifiMotorsSerial.cpp
testCode/Teleop/Teleop_Motors_Arduino/: Teleop_Motors_Arduino.ino
testCode/Vision/BackSensors/VisionBeaconsTest/: runVisionBeacons.cpp
testCode/Vision/Camera/: Camera.cpp
testCode/Vision/VisionAruco/configs/: webcamcalibration.yml
testCode/Vision/VisionBeacons/: VisionBeacons.cpp
testCode/Vision/VisionBeacons/Opencv/: Object.h
testCode/VisionAruco/: get_pose.cpp
testCode/VisionAruco/class/: ArucoPose.cpp  ArucoPose.h  ArucoPoseExample  ArucoPoseExample.cpp
testCode/VisionBeacons/: GripPipeline.cpp  GripPipeline.h  VisionBeacons.cpp  VisionBeacons.h  VisionBeacons01.grip
testCode/VisionBeacons/Beacons/: Constant_light.c  HowToCompile.txt
testCode/VisionBeacons/Example/: Camera.cpp  MAIN.cpp  VisionBeacons.cpp  VisionBeacons.h
testCode/VisionBeacons/Opencv/: HowToCompileOpencv.txt  Object.cpp  TEST.cpp  multipleObjectTrackingcopy.cpp
testCode/VisionBeacons/PsmoveBeacons/: Constant_light
testCode/VisionBeacons/VisionBeaconsClass/: Camera.cpp  Camera.h  VisionBeacons.cpp  VisionBeaconsTest.cpp
testCode/VisionBeacons/VisionBeaconsExample/: TEST.cpp  process
testCode/VisionBeacons/VisionBeconsClass/: VisionBeacons.cpp  VisionBeacons.h
testCode/cpp/Telecomm/: Telecomm.cpp  Telecomm.h  telecommTest.cpp  twoWayUDP_tst1.cpp
testCode/formatter/: Devlog  Formatter.cc  Formatter.cpp  Formatter.h  Formatter.hh  Formatter.hpp  Formatter_Int.cpp  Formatter_Int.h  Formatter_T.cpp  Formatter_T.h  compile.sh  tst.cpp  tst2.cpp  tstC.cc
testCode/formatter/Arduino_Formatter/: Formatter.cpp  Formatter.h
testCode/pointcloud/lidarRealtimeViz/: Lidar.cpp  Lidar.h  leftStandLidar.yml  lidarRealtimeViz.cpp  tst.cpp
